# poc-project

./: README.md  client.py  conftest.py  firebase_config.py  migrate.py  pyproject.toml  setup.py
cliente/: cliente.py
server/: app.py  firebase_config.py  server.py
server/static/css/: styles.css
server/templates/: cancelar.html  index.html  listar.html  reservar.html
servidor/: app.py  models.py  repository.py  services.py
tests/: test_client.py  test_server.py
